--- a/index.html
+++ b/index.html
@@ -214,14 +214,88 @@ $(document).ready(function() {
   <body>
     <div id="wrap">
       <div class="container">
-        <div class="page-header"><h2><b>Моніторинг башти</b></h2></div>
+        <div class="page-header"><h3>Моніторинг водонапорних башт та КНС</h3></div>
 		<div class="panel panel-default">
 		  <div class="panel-body">
 
+			<div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
                 <div class="card-body">
 			  	<div class="row">Башта №1. <small>Адреса: Ставище, вул. Шевченка 123</small></div>
+				<div class="row">
+				<table class="table table-striped">
+				<tr><td style="vertical-align:middle;">
+			  		<div class="row">
+					<div class="col-md-6">
+					  <label for="check_wt1remctrl">Дистанційне керування</label>
+					  <input type="checkbox" name="check_wt1remctrl" id="check_wt1remctrl">
+					</div>
+					<div class="col-md-3">
+					  <label for="check_wt1pump1">Насос 1</label>
+					  <input type="checkbox" name="check_wt1pump1" id="check_wt1pump1">
+					</div>
+					<div class="col-md-3">
+					  <label for="check_wt1pump2">Насос 2</label>
+					  <input type="checkbox" name="check_wt1pump2" id="check_wt1pump2">
+					</div>
+					</div>
+				</td></tr>
+				<tr><td style="vertical-align:middle;">
+			  		<div class="row">
+					<div class="col-md-8">
+					  <h4>Зовнішнє живлення</h4>
+					  <small style="display:none" id="alarm_wt1ExtPwr">(no value recieved)</small>
+					</div>
+					<div class="col-md-4">
+					  <h4>&nbsp;<span id="label_wt1ExtPwr" class="label">Unknown</span></h4>
+					</div>
+					</div>
+				</td></tr>
+				<tr><td style="vertical-align:middle;">
+			  		<div class="row">
+					<div class="col-md-8">
+					  <h4>Насос 1</h4>
+					  <small style="display:none" id="value_wt1Pump1">(no value recieved)</small>
+					</div>
+					<div class="col-md-4">
+				 	  <h4>&nbsp;<span id="label_wt1Pump1" class="label">Unknown</span></h4>
+					</div>
+					</div>
+				</td></tr>
+				<tr><td style="vertical-align:middle;">
+			  		<div class="row">
+					<div class="col-md-8">
+					  <h4>Насос 2</h4>
+					  <small style="display:none" id="value_wt1Pump2">(no value recieved)</small>
+					</div>
+					<div class="col-md-4">
+					  <h4>&nbsp;<span id="label_wt1Pump2" class="label">Unknown</span></h4>
+					</div>
+					</div>
+				</td></tr>
+				<tr><td style="vertical-align:middle;">
+			  		<div class="row">
+					<div class="col-md-8">
+					  <h4>Тиск у системі</h4>
+					  <small style="display:none" id="value_wt1pressure">(no value recieved)</small>
+					</div>
+					<div class="col-md-4">
+					  <h4>&nbsp;<span id="label_wt1pressure" class="label">Unknown</span></h4>
+					</div>
+					</div>
+				    <div id="chart_wt1pressure" style="height:180px; width:390px;"></div>
+				</td></tr>
+				</table>
+                </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <div class="card-body">
+			  	<div class="row">Башта №2. <small>Адреса: Ставище, вул. Гончара 987</small></div>
 				<div class="row">
 				<table class="table table-striped">
 				<tr><td style="vertical-align:middle;">
@@ -287,10 +361,18 @@ $(document).ready(function() {
 				</td></tr>
 				</table>
                 </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <div class="card-body">
+			  	<div class="row">Башта №3. <small>Адреса: Ставище, вул. Стеценка 678</small></div>
                 </div>
               </div>
             </div>
+			</div>
 
+			<div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
                 <div class="card-body">
@@ -319,7 +401,6 @@ $(document).ready(function() {
                 </div>
               </div>
             </div>
-
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
                 <div class="card-body">
@@ -334,33 +415,6 @@ $(document).ready(function() {
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
-                </div>
-              </div>
             </div>
           
 		  </div>
